# radar-nlp

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Mistral_Test.py  README.md  README_local.md  app.py  corpus_offres_data.csv  environment.yml  main.py  metiers.csv  pyproject.toml  radar_notebook.ipynb  requirements.txt  run.sh  scraping.ipynb  skills.csv
app/: .env  app.py  charts.py  components.py  config.py  db.py  geo.py  home.py  llm_mistral.py
data/: cluster_sizes.csv  clusters_examples_k25.csv  clusters_examples_per_cluster.csv  clusters_k12_top_terms.json  clusters_k25_top_terms.json  clusters_labels_k25.csv  clusters_quality.csv  clusters_quality_report.md  clusters_report_k25.md  clusters_summary_k25.csv  emploit_territorial_mistral_enriched.csv  france_travail.csv  france_travail.jsonl  k_search_results.csv  offers.sqlite-shm  radar_jobs.duckdb  report_k25.md  skills_by_cluster.csv  top_terms_by_cluster.csv
database/: etl_pipeline.py  schema.sql
docs/: DATA_GUIDE.md  DEVELOPER_GUIDE.md  DOCKER_GUIDE.md  USER_GUIDE.md  docs_README.md
geographic_enrichment/: enrich_geography.py  regions_france.json
models/: tfidf_vec_k25.joblib
nlp_analysis/: cluster_assignments.csv  clustering.py  clustering_model.pkl  profile_assignments.csv  regional_tfidf_results.json  skill_topic_model.pkl  tfidf_analysis.py  topic_modeling.py  wordcloud_generator.py
pages/: 01_Analytics.py  02_Carte.py  02_Cartographie.py  03_Analyse_NLP.py  03_Intelligence_Metier.py  04_Competences.py  04_Explorateur.py  05_Comparaison.py  05_Contribution.py  06_Ajout_Offre.py  (+1 more)
(+98 files in other folders)
