[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-nlp"
version = "0.1.0"
description = "RADAR — Recherche Analytique des Annonces Régionales"
authors = [
    { name = "Rina Razafimahefa" },
    { name = "Mohamed Habib Bah" },
    { name = "Aya Mecheri" },
    { name = "Thibaud Lecomte" }
]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
